[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/chewy_font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://screens/create_user.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/ttf/Chewy.ttf"

[sub_resource type="DynamicFont" id=2]
size = 68
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="FirstRunScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.109804, 0, 1 )

[node name="lblWelcome" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -809.5
margin_top = -180.5
margin_right = 809.5
margin_bottom = 180.5
custom_colors/font_color = Color( 0.196078, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "FirstRunScreen_lblWelcome"
align = 1
valign = 1

[node name="editPlayerName" type="LineEdit" parent="."]
pause_mode = 2
margin_left = 175.0
margin_top = 60.0
margin_right = 1115.0
margin_bottom = 150.0
rect_min_size = Vector2( 800, 35 )
custom_fonts/font = ExtResource( 1 )
max_length = 25
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="btnOkay" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -610.0
margin_top = 60.0
margin_right = -180.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 1 )
text = "FirstRunScreen_Okay"

[connection signal="gui_input" from="editPlayerName" to="." method="_on_editPlayerName_gui_input"]
[connection signal="pressed" from="btnOkay" to="." method="_on_btnOkay_pressed"]
